ingress/nginx-ingress/hands-on/authentication/basic/v2/blog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogging-svc
  labels:
    app: blogging-application
spec:
  type: ClusterIP
  selector:
    app: blogging-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
